En esta ocasión cambie el color del titulo

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,15 @@
 body{
 	font-family : "Arial";
 	text-align : center;
+	background: #000;
+}
+
+h1{
+	color: #aeff00;
+	color: #e4eeff;
+}
+
+p{
+	color: #cacaca;
+	font-weight: bold;
 }
