--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ p{
 }
 
 .container__title{
-	font-size: 32px;
+	
 	color: rgba(127,255,127, 0.60);
 }
 
@@ -34,6 +34,21 @@ p{
 }
 
 header{
-	margin-top: 32px;
-	color: #cacaca;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	background-color: #afff00;
+	overflow: hidden;
+	border-radius: inherit;
+	box-shadow: 1px 2px 6px 1px #ffffaa;
+}
+
+.header__title,
+.header__description{
+	font-weight: bolder;
+	color: #333131;
+}
+
+.header__description{
+	font-size: 1.2rem;
 }
